Use libertem_blobfinder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # FIXME use released version as soon as required features #549 #571 are released. Expected in 0.4.0
-# libertem[hdbscan,torch,pyfftw]
--e git+https://github.com/LiberTEM/LiberTEM#egg=libertem[hdbscan,torch,pyfftw]
+# libertem[hdbscan,torch]
+-e git+https://github.com/LiberTEM/LiberTEM#egg=libertem[hdbscan,torch]
+libertem-blobfinder
 numpy
 matplotlib
 scikit-learn
